# er1-spec

./: .gitignore  CONFORMANCE.md  CONTRIBUTING.md  IMPLEMENTATIONS.md  README.md  SCOPE_OF_CERTIFICATION.md  er1.schema.json  er1_verify.mjs  er1_verify.py  pyproject.toml  test_conformance.py  test_cross_language.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-a-verifier.md
.github/workflows/: ci.yml
